<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/profilemale" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/btn_profile"
            android:includeFontPadding="false"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/btn_profile"
            android:includeFontPadding="false"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="Home"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bot_nav"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/tab_corners_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Order"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="expand_all" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_order" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/tab_corners_shape">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/history"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnhistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="expand_all" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/tab_corners_shape">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_baseline_fmd_good_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="Map"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="expand_all" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/tab_corners_shape">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="Chat"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="expand_all" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bot_nav"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true">

            <!--            <ImageView-->
            <!--                android:id="@+id/btnmaterial"-->
            <!--                android:layout_width="30dp"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginVertical="20dp"-->
            <!--                android:layout_marginEnd="30dp"-->
            <!--                android:layout_toStartOf="@+id/btnpost"-->
            <!--                android:background="@drawable/btnmaterinewp" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/btnpost"-->
            <!--                android:layout_width="30dp"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_centerHorizontal="true"-->
            <!--                android:layout_marginHorizontal="10dp"-->
            <!--                android:layout_marginVertical="20dp"-->
            <!--                android:src="@drawable/btnuploadnew" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/btnportfolio"-->
            <!--                android:layout_width="30dp"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginVertical="20dp"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:layout_toEndOf="@+id/btnpost"-->
            <!--                android:background="@drawable/btnportnew" />-->
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>